--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,4 +14,5 @@ collections:
       - {label: "Extracto", name: "excerpt", widget: "string"}
       - {label: "Cuerpo", name: "body", widget: "markdown"}
       - {label: "Sitemap", name: "sitemap", widget: "hidden", default: "false"}
+      - {label: "Permalink", name: "permalink", widget: "string", default: "{{slug}}"}
 
