--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,8 +29,8 @@ collections:
           - {label: Info, name: info, widget: string}
           - {label: Email, name: email, widget: string}
           - {label: Numero Educ, name: number_educ, widget: number}
-          - {label: Educación 1, name: education1, widget: text}
-          - {label: Educación 2, name: education2, widget: text}
-          - {label: Educación 3, name: education3, widget: text}
-          - {label: Educación 4, name: education4, widget: text}
-          - {label: Educación 5, name: education5, widget: text}
+          - {label: Educación 1, name: education1, widget: text, required: false}
+          - {label: Educación 2, name: education2, widget: text, required: false}
+          - {label: Educación 3, name: education3, widget: text, required: false}
+          - {label: Educación 4, name: education4, widget: text, required: false}
+          - {label: Educación 5, name: education5, widget: text, required: false}
