Update Listas “investigadores”

--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -1,9 +1,8 @@
-miembros:
-  - education1: hjdfkslsd
-    education2: ''
-    email: rodrigo@noseque.cl
-    info: estudiante no se que
-    name: Rodrigo Dover
+investigador:
+  - education1: Enseñanza básica terminada? lol
+    email: agucova@gmail.com
+    info: Perdón dover
+    name: Agustín Covarrubias
     number_educ: 1
     photo: >-
-      https://raw.githubusercontent.com/agucova/rayolab/gh-pages/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg
+      /images/uploads/kirito-is-the-protagonist-in-a-show-based-on-a-light-novel-series-in-which-people-get-trapped-in-a-v.jpeg
