Update Listas “investigadores”

--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -1,8 +1,8 @@
-investigador:
-  - education1: Enseñanza básica terminada? lol
+miembros:
+  - education1: 'Enseñanza Básica, técnicamente'
     email: agucova@gmail.com
-    info: Perdón dover
+    info: Estudiante genio que maneja la web)?
     name: Agustín Covarrubias
     number_educ: 1
     photo: >-
-      /images/uploads/kirito-is-the-protagonist-in-a-show-based-on-a-light-novel-series-in-which-people-get-trapped-in-a-v.jpeg
+      https://raw.githubusercontent.com/agucova/rayolab/gh-pages/images/uploads/kirito-is-the-protagonist-in-a-show-based-on-a-light-novel-series-in-which-people-get-trapped-in-a-v.jpeg
