Update Listas “investigadores”

--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -8,7 +8,7 @@ miembros:
       https://raw.githubusercontent.com/agucova/rayolab/gh-pages/images/uploads/kirito-is-the-protagonist-in-a-show-based-on-a-light-novel-series-in-which-people-get-trapped-in-a-v.jpeg
   - education1: Enseñanza Básica
     education2: Enseñanza Media
-    education3: Licensiatura en Biología (UdeC)
+    education3: Licenciatura en Biología (UdeC)
     email: rodrigo@noseque.cl
     info: Un biólogo ultra nerd?
     name: Rodrigo Dover
