Update Listas “noticias”

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
 entradas:
   - date: 02/03/2019
     headline: 'Sorpresa: La homeopatía sigue sin funcionar.'
+  - date: 05/03/2019
+    headline: Así se verá la página web.
