--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -16,6 +16,17 @@ miembros:
     number_educ: 3
     photo: >-
       https://raw.githubusercontent.com/agucova/rayolab/gh-pages/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg
+  - education1: Licenciado en Ciencias con Mención en Biología de la Universidad de Chile.
+    education2: Estudiante del Magíster en Ciencias Biológicas de la Universidad de Chile.
+    email: 'rodrigo.dover[at]ug[dot]uchile[dot]cl'
+    info: >-
+      Mi interés se enfoca en el estudio de los sistemas visuales,
+      particularmente en el desarrollo de las RGC (retinal ganglion cells).
+      También tengo gustos por la historia de la ciencia, la política científica
+      (#ScienceMarch) y la neurociencia en general.
+    name: Rodrigo Dover Aburto
+    number_educ: 2
+    photo: /images/uploads/cesolaa.png
   - education1: Titulado en Biotecnología Molecular en la Universidad de Chile.
     education2: >-
       Estudiante de programa de Doctorado en Ciencias con mención en Biología
