Update Listas “investigadores”

--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -14,8 +14,8 @@ miembros:
     number_educ: 1
     photo: /images/uploads/elisa.png
   - education1: >-
-      Asistente de Investigación, Laboratorio Neurobiología, Universidad de
-      Chile.
+      Asistente de Investigación, Laboratorio de Neurobiología y Biología del
+      Conocer (RayoLab).
     education2: 'Licenciada en Ciencias con mención en Biología, Universidad de Chile.'
     education3: 'Magíster en Ciencias Biológicas, Universidad de Chile.'
     email: 'carolinanorambuena.l[at]gmail[dot]com'
