Update Listas “investigadores”

--- a/_data/investigadores.yml
+++ b/_data/investigadores.yml
@@ -61,4 +61,4 @@ miembros:
       (#ScienceMarch), la docencia y la neurociencia en general.
     name: Rodrigo Dover Aburto
     number_educ: 2
-    photo: /images/uploads/carolina-norambuena.jpg
+    photo: /images/uploads/cesolaa.png
