--- a/_data/publicaciones.yml
+++ b/_data/publicaciones.yml
@@ -189,28 +189,7 @@ papers:
       display: Science 327, 181 (2010)
     highlight: 1
     news1: <a style="color:#FF0000" href="http://www.sciencemag.org/content/327/5962/155"> Featured in a ‘Perspective’ by E Fradkin &amp; SA Kivelson</a>
-    news2: See also <a  href="https://www.newscientist.com/article/dn18354-electron-spotting-could-explain-warm-superconductors/">Article on NewScientist</a> by Colin Barras
-
-  - title: Heavy d-electron quasiparticle interference and real-space electronic structure of Sr3Ru2O7
-    image: Pub_hBN.png
-    description:
-      QPI in Sr327.
-    authors: Jinho Lee* & M. P. Allan*, M. A.Wang, J. Farrell, S. A. Grigera, F. Baumberger, J. C. Davis and A. P. Mackenzie
-    link:
-      url: https://www.nature.com/nphys/journal/v5/n11/full/nphys1397.html
-      display: Nature Physics 5, 800 (2009)
-    highlight: 0
-
-  - title: Fermi surface and van Hove singularities in the itinerant metamagnet Sr3Ru2O7
-    image: Pub_hBN.png
-    description:
-      We determine the Fermi surface of Sr327.
-    authors:
-      A Tamai, MP Allan, JF Mercure, W Meevasana, R Dunkel, DH Lu, RS Perry, AP Mackenzie, David J Singh, Z-X Shen, F Baumberger
-    link:
-      url: http://journals.aps.org/prl/abstract/10.1103/PhysRevLett.101.026407
-      display: Phys. Rev. Lett. 101, 026407 (2008)
-    highlight: 0
+    news2: See also <a  href="https://www.newscientist.com/article/dn18354-electron-spotting-could-explain-warm-superconductors/">Article on NewScientist</a> by Colin Barras.
 
   - title: Tunable  self-assembly of one-dimensional nanostructures with orthogonal directions
     image: Pub_hBN.png
@@ -222,13 +201,3 @@ papers:
       url: http://www.nanoscalereslett.com/content/2/2/94
       display: Nanoscale Research Letters 2, 94 (2007)
     highlight: 1
-
-  - title: Photoelectron Diffraction for a Look inside Nanostructures
-    image: dummy.png
-    description: ""
-    authors:
-      J Osterwalder, A Tamai, W Auwärter; MP Allan, T Greber
-    link:
-      url: hhttp://www.ingentaconnect.com/content/scs/chimia/2006/00000060/00000011/art00013
-      display: CHIMIA 11, 759 (2006)
-    highlight: 0
