--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,13 +1,11 @@
 papers:
-  - title: Definition of design guidelines, construction and performance of an
-      ultra-stable scanning tunneling microscope for spectroscopic imaging
-    image: DomePub.png
-    description: Our first completely home-built STM is alive! And it has the
-      world’s highest resonance frequency.
-    authors: I Battisti, G Verdoes, K van Oosten, KM Bastiaans, and MP Allan
+  - title: PRUEBA 1
+    image: /images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg
+    description: bla bla bla bla bla
+    authors: ASDF QWERTY
     link:
-      url: https://aip.scitation.org/doi/10.1063/1.5064442
-      display: Rev. Sci. Instrum. 89, 123705 (2018)
+      url: https://www.u-cursos.cl
+      display: U-Cursos
     highlight: 1
     news2: null
   - title: Charge trapping and super-Poissonian noise centres in a cuprate
