Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -215,15 +215,13 @@ papers:
       Cornell Cornincle </a> by Bill Steele, <a
       href="http://www.eurekalert.org/pub_releases/2012-05/dnl-avo050312.php">
       Eureka Alert </a>
-  - title: How Kondo-holes create intense nanoscale heavy-fermion hybridization
-      disorder
-    image: dummy.png
+  - title: PRUEBA 2
+    image: /images/uploads/kirito-is-the-protagonist-in-a-show-based-on-a-light-novel-series-in-which-people-get-trapped-in-a-v.jpeg
     description: bla bla bla bla
-    authors: MH Hamidian, AR Schmidt, IA Firmo, MP Allan, P Bradley, JD Garrett, TJ
-      Williams, GM Luke, Y Dubi, AV Balatsky, JC Davis
+    authors: QWERTY 2
     link:
-      url: http://www.pnas.org/content/108/45/18233
-      display: PNAS 108, 18233 (2011)
+      url: http://nohaynadaaqui.com
+      display: nada
     highlight: 0
     news2: null
   - title: Nematic electronic structure in the “parent” state of the iron-based
