Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 papers:
   - title: PRUEBA 1
-    image: /images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg
+    image: /images/uploads/cesolaa.png
     description: bla bla bla bla bla
     authors: ASDF QWERTY
     link:
