Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 papers:
-  - title: PRUEBA 1
+  - title: PRUEBA ALPHA
     image: /images/uploads/cesolaa.png
     description: bla bla bla bla bla
     authors: ASDF QWERTY
