Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,1 +1,9 @@
 papers:
+  - highlight: 1
+    title: Algo
+    image: /images/uploads/edm7c6kx0aa8i84.jpg
+    description: Bla bla bla
+    authors: Perrito bonito et al., 2020
+    link:
+      url: nohyanadaaqui.com
+      display: No hay nada
