Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 papers:
   - highlight: 0
-    title: Directional Movement and Horizontal Edge Detectors in the Pigeon Retina
+    title: Directional movement and horizontal edge detectors in the pigeon retina.
     image: ""
     description: Abstract. There are ganglion cells in the pigeon retina that
       respond selectively, some to any edge moving in a particular direction
@@ -15,7 +15,7 @@ papers:
     news: ""
   - highlight: 1
     title: "Intratelencephalic projections of the avian visual dorsal ventricular
-      ridge: Laminarly segregated, reciprocally and topographically organized"
+      ridge: Laminarly segregated, reciprocally and topographically organized."
     authors: Fernández, M., Ahumada-Galleguillos, P., Sentis, E., Marín, G., &
       Mpodozis, J. (2019)
     link:
